[project]
name = "edi-sentiment"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "pandas>=2.2",
    "python-dotenv>=1.0",
    "nltk>=3.9",
    "textblob>=0.18",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "wordcloud>=1.9",
    "certifi>=2026.4.22",
]

[project.scripts]
edi-sentiment = "edi_sentiment.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/edi_sentiment"]
